# Ex4-TijnutMitkadem1-EzequielAndErez

./: README.md
ex4/: Astar.h  BFS.h  BestFS.h  CMakeLists.txt  Cell.h  DFS.h  FileCacheManager.h  ICacheManager.h  IClientHandler.h  ISearchable.h  ISearcher.h  IServer.h  ISolver.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  OA.h  ParallelServer.cpp  ParallelServer.h  PriorityQueue.h  SerialServer.cpp  SerialServer.h  State.h  main.cpp
